--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#" id="google_logo"><img src="image/google.png"/></a>
         </div>
         <div class="form">  
-            <form>
+            <form action="/index.html">
               <label for="form-search"></label>
               <input type="text" id="form-search" placeholder="Search Google or type URL">
             </form>
@@ -39,6 +39,5 @@
               <li><a href="#">Settings</a></li>
             </ul>       
         </footer> 
-
     </body>
 </html>
